secp256k1-zkp-sys/secp_bindings.rs

extern "C" {
    #[doc = " Parse an ECDSA signature in compact (64 bytes) format."]
    #[doc = ""]
    #[doc = "  Returns: 1 when the signature could be parsed, 0 otherwise."]
    #[doc = "  Args: ctx:      a secp256k1 context object"]
    #[doc = "  Out:  sig:      a pointer to a signature object"]
    #[doc = "  In:   input64:  a pointer to the 64-byte array to parse"]
    #[doc = ""]
    #[doc = "  The signature must consist of a 32-byte big endian R value, followed by a"]
    #[doc = "  32-byte big endian S value. If R or S fall outside of [0..order-1], the"]
    #[doc = "  encoding is invalid. R and S with value 0 are allowed in the encoding."]
    #[doc = ""]
    #[doc = "  After the call, sig will always be initialized. If parsing failed or R or"]
    #[doc = "  S are zero, the resulting sig value is guaranteed to fail validation for any"]
    #[doc = "  message and public key."]
    pub fn secp256k1_zkp_ecdsa_signature_parse_compact(
        ctx: *const secp256k1_zkp_context,
        sig: *mut secp256k1_zkp_ecdsa_signature,
        input64: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Parse a DER ECDSA signature."]
    #[doc = ""]
    #[doc = "  Returns: 1 when the signature could be parsed, 0 otherwise."]
    #[doc = "  Args: ctx:      a secp256k1 context object"]
    #[doc = "  Out:  sig:      a pointer to a signature object"]
    #[doc = "  In:   input:    a pointer to the signature to be parsed"]
    #[doc = "        inputlen: the length of the array pointed to be input"]
    #[doc = ""]
    #[doc = "  This function will accept any valid DER encoded signature, even if the"]
    #[doc = "  encoded numbers are out of range."]
    #[doc = ""]
    #[doc = "  After the call, sig will always be initialized. If parsing failed or the"]
    #[doc = "  encoded numbers are out of range, signature validation with it is"]
    #[doc = "  guaranteed to fail for every message and public key."]
    pub fn secp256k1_zkp_ecdsa_signature_parse_der(
        ctx: *const secp256k1_zkp_context,
        sig: *mut secp256k1_zkp_ecdsa_signature,
        input: *const ::std::os::raw::c_uchar,
        inputlen: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Serialize an ECDSA signature in DER format."]
    #[doc = ""]
    #[doc = "  Returns: 1 if enough space was available to serialize, 0 otherwise"]
    #[doc = "  Args:   ctx:       a secp256k1 context object"]
    #[doc = "  Out:    output:    a pointer to an array to store the DER serialization"]
    #[doc = "  In/Out: outputlen: a pointer to a length integer. Initially, this integer"]
    #[doc = "                     should be set to the length of output. After the call"]
    #[doc = "                     it will be set to the length of the serialization (even"]
    #[doc = "                     if 0 was returned)."]
    #[doc = "  In:     sig:       a pointer to an initialized signature object"]
    pub fn secp256k1_zkp_ecdsa_signature_serialize_der(
        ctx: *const secp256k1_zkp_context,
        output: *mut ::std::os::raw::c_uchar,
        outputlen: *mut size_t,
        sig: *const secp256k1_zkp_ecdsa_signature,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Serialize an ECDSA signature in compact (64 byte) format."]
    #[doc = ""]
    #[doc = "  Returns: 1"]
    #[doc = "  Args:   ctx:       a secp256k1 context object"]
    #[doc = "  Out:    output64:  a pointer to a 64-byte array to store the compact serialization"]
    #[doc = "  In:     sig:       a pointer to an initialized signature object"]
    #[doc = ""]
    #[doc = "  See secp256k1_zkp_ecdsa_signature_parse_compact for details about the encoding."]
    pub fn secp256k1_zkp_ecdsa_signature_serialize_compact(
        ctx: *const secp256k1_zkp_context,
        output64: *mut ::std::os::raw::c_uchar,
        sig: *const secp256k1_zkp_ecdsa_signature,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Verify an ECDSA signature."]
    #[doc = ""]
    #[doc = "  Returns: 1: correct signature"]
    #[doc = "           0: incorrect or unparseable signature"]
    #[doc = "  Args:    ctx:       a secp256k1 context object, initialized for verification."]
    #[doc = "  In:      sig:       the signature being verified (cannot be NULL)"]
    #[doc = "           msg32:     the 32-byte message hash being verified (cannot be NULL)"]
    #[doc = "           pubkey:    pointer to an initialized public key to verify with (cannot be NULL)"]
    #[doc = ""]
    #[doc = " To avoid accepting malleable signatures, only ECDSA signatures in lower-S"]
    #[doc = " form are accepted."]
    #[doc = ""]
    #[doc = " If you need to accept ECDSA signatures from sources that do not obey this"]
    #[doc = " rule, apply secp256k1_zkp_ecdsa_signature_normalize to the signature prior to"]
    #[doc = " validation, but be aware that doing so results in malleable signatures."]
    #[doc = ""]
    #[doc = " For details, see the comments for that function."]
    pub fn secp256k1_zkp_ecdsa_verify(
        ctx: *const secp256k1_zkp_context,
        sig: *const secp256k1_zkp_ecdsa_signature,
        msg32: *const ::std::os::raw::c_uchar,
        pubkey: *const secp256k1_zkp_pubkey,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Convert a signature to a normalized lower-S form."]
    #[doc = ""]
    #[doc = "  Returns: 1 if sigin was not normalized, 0 if it already was."]
    #[doc = "  Args: ctx:    a secp256k1 context object"]
    #[doc = "  Out:  sigout: a pointer to a signature to fill with the normalized form,"]
    #[doc = "                or copy if the input was already normalized. (can be NULL if"]
    #[doc = "                you're only interested in whether the input was already"]
    #[doc = "                normalized)."]
    #[doc = "  In:   sigin:  a pointer to a signature to check/normalize (cannot be NULL,"]
    #[doc = "                can be identical to sigout)"]
    #[doc = ""]
    #[doc = "  With ECDSA a third-party can forge a second distinct signature of the same"]
    #[doc = "  message, given a single initial signature, but without knowing the key. This"]
    #[doc = "  is done by negating the S value modulo the order of the curve, 'flipping'"]
    #[doc = "  the sign of the random point R which is not included in the signature."]
    #[doc = ""]
    #[doc = "  Forgery of the same message isn't universally problematic, but in systems"]
    #[doc = "  where message malleability or uniqueness of signatures is important this can"]
    #[doc = "  cause issues. This forgery can be blocked by all verifiers forcing signers"]
    #[doc = "  to use a normalized form."]
    #[doc = ""]
    #[doc = "  The lower-S form reduces the size of signatures slightly on average when"]
    #[doc = "  variable length encodings (such as DER) are used and is cheap to verify,"]
    #[doc = "  making it a good choice. Security of always using lower-S is assured because"]
    #[doc = "  anyone can trivially modify a signature after the fact to enforce this"]
    #[doc = "  property anyway."]
    #[doc = ""]
    #[doc = "  The lower S value is always between 0x1 and"]
    #[doc = "  0x7FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF5D576E7357A4501DDFE92F46681B20A0,"]
    #[doc = "  inclusive."]
    #[doc = ""]
    #[doc = "  No other forms of ECDSA malleability are known and none seem likely, but"]
    #[doc = "  there is no formal proof that ECDSA, even with this additional restriction,"]
    #[doc = "  is free of other malleability. Commonly used serialization schemes will also"]
    #[doc = "  accept various non-unique encodings, so care should be taken when this"]
    #[doc = "  property is required for an application."]
    #[doc = ""]
    #[doc = "  The secp256k1_zkp_ecdsa_sign function will by default create signatures in the"]
    #[doc = "  lower-S form, and secp256k1_zkp_ecdsa_verify will not accept others. In case"]
    #[doc = "  signatures come from a system that cannot enforce this property,"]
    #[doc = "  secp256k1_zkp_ecdsa_signature_normalize must be called before verification."]
    pub fn secp256k1_zkp_ecdsa_signature_normalize(
        ctx: *const secp256k1_zkp_context,
        sigout: *mut secp256k1_zkp_ecdsa_signature,
        sigin: *const secp256k1_zkp_ecdsa_signature,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static secp256k1_zkp_nonce_function_rfc6979: secp256k1_zkp_nonce_function;
}
extern "C" {
    pub static secp256k1_zkp_nonce_function_default: secp256k1_zkp_nonce_function;
}
extern "C" {
    #[doc = " Create an ECDSA signature."]
    #[doc = ""]
    #[doc = "  Returns: 1: signature created"]
    #[doc = "           0: the nonce generation function failed, or the secret key was invalid."]
    #[doc = "  Args:    ctx:    pointer to a context object, initialized for signing (cannot be NULL)"]
    #[doc = "  Out:     sig:    pointer to an array where the signature will be placed (cannot be NULL)"]
    #[doc = "  In:      msg32:  the 32-byte message hash being signed (cannot be NULL)"]
    #[doc = "           seckey: pointer to a 32-byte secret key (cannot be NULL)"]
    #[doc = "           noncefp:pointer to a nonce generation function. If NULL, secp256k1_zkp_nonce_function_default is used"]
    #[doc = "           ndata:  pointer to arbitrary data used by the nonce generation function (can be NULL)"]
    #[doc = ""]
    #[doc = " The created signature is always in lower-S form. See"]
    #[doc = " secp256k1_zkp_ecdsa_signature_normalize for more details."]
    pub fn secp256k1_zkp_ecdsa_sign(
        ctx: *const secp256k1_zkp_context,
        sig: *mut secp256k1_zkp_ecdsa_signature,
        msg32: *const ::std::os::raw::c_uchar,
        seckey: *const ::std::os::raw::c_uchar,
        noncefp: secp256k1_zkp_nonce_function,
        ndata: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Verify an ECDSA secret key."]
    #[doc = ""]
    #[doc = "  A secret key is valid if it is not 0 and less than the secp256k1 curve order"]
    #[doc = "  when interpreted as an integer (most significant byte first). The"]
    #[doc = "  probability of choosing a 32-byte string uniformly at random which is an"]
    #[doc = "  invalid secret key is negligible."]
    #[doc = ""]
    #[doc = "  Returns: 1: secret key is valid"]
    #[doc = "           0: secret key is invalid"]
    #[doc = "  Args:    ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "  In:      seckey: pointer to a 32-byte secret key (cannot be NULL)"]
    pub fn secp256k1_zkp_ec_seckey_verify(
        ctx: *const secp256k1_zkp_context,
        seckey: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Compute the public key for a secret key."]
    #[doc = ""]
    #[doc = "  Returns: 1: secret was valid, public key stores"]
    #[doc = "           0: secret was invalid, try again"]
    #[doc = "  Args:   ctx:        pointer to a context object, initialized for signing (cannot be NULL)"]
    #[doc = "  Out:    pubkey:     pointer to the created public key (cannot be NULL)"]
    #[doc = "  In:     seckey:     pointer to a 32-byte secret key (cannot be NULL)"]
    pub fn secp256k1_zkp_ec_pubkey_create(
        ctx: *const secp256k1_zkp_context,
        pubkey: *mut secp256k1_zkp_pubkey,
        seckey: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
